changed field injection to injection by constructor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.social.facebook.appId=760505277482869
 spring.social.facebook.appSecret=4dfca96eb1392419280461a3e6d06022
 
 
+server.port=8090
